[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imapcrawler"
version = "0.1.2"
description = "A Python tool to crawl an IMAP inbox and extract emails as structured records"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["imap", "email", "crawler", "email-analysis"]
dependencies = []

[project.optional-dependencies]
all = [
    "tqdm",
    "beautifulsoup4",
    "python-dateutil",
    "mail-parser-reply",
    "chromadb"
]

[project.urls]
Homepage = "https://github.com/yourusername/imapcrawler"
Repository = "https://github.com/yourusername/imapcrawler"

[project.scripts]
imapcrawler = "imapcrawler:main"